--- a/views/product-details.html
+++ b/views/product-details.html
@@ -7,12 +7,12 @@
 
     <!--Product Meta-->
     <div class="product-grid__meta">
-        <!-- Tittle-->
-        <h3 class="product-grid__name"><a><!--Title--></a></h3>
+        
+        <h3 class="product-grid__name"><a>{{ prodInfo.title }}</a></h3>
         <!--Product Description-->
-        <h4 class="product-grid__sub"><!--Desc--></h4>
+        <h4 class="product-grid__sub">{{ prodInfo.desc }}</h4>
 
         <!--Product Price-->
-        <div class="product-grid__price"><!--Price--></div>
+        <div class="product-grid__price">${{ prodInfo.price }}</div>
     </div>
 </div>
